# Top_Notch_Notes

./: .gitignore  README.md
harness/: CMakeLists.txt
harness/include/: generator.hpp  miniaudio.h
harness/src/: main.cpp
harness/src/modules/: audio.ixx  harness.ixx  io.ixx  ringbuffer.ixx  telemetry.ixx  transcribe.ixx
harness/tests/: CMakeLists.txt  test_ringbuffer.cpp  test_telemetry.cpp
pilot/: go.mod  go.sum  main.go
pilot/internal/ipc/: controller.go  controller_test.go
pilot/internal/session/: manager.go  manager_test.go
pilot/internal/ui/: dashboard.go
scripts/: build.sh  run.sh
